@@ -45,6 +45,9 @@ benutzt werden.<br><br>
 <tr><td><tt>phase(x)</tt></td><td>Phase in Grad</td></tr>
 <tr><td><tt>angle(x)</tt></td><td>Phase im Bogenmass</td></tr>
 <tr><td><tt>arg(x)</tt></td><td>gleicher Ausdruck wie angle(x)</td></tr>
+<tr><td><tt>deg2rad(x)</tt></td><td>Umrechnung von Grad nach Bogenmass</td></tr>
+<tr><td><tt>rad2deg(x)</tt></td><td>Umrechnung von Bogenmass nach Grad</td></tr>
+<tr><td><tt>unwrap(rad[,tol])</tt></td><td>gleicht Phasenspr&uuml;nge (im Bogenmass) aus und verwendet dabei die optionale Toleranzschwelle (Standardwert ist pi)</td></tr>
 <tr><td><tt>dB(x)</tt></td><td>Spannungsdezibel</td></tr>
 <tr><td><tt>sqrt(x)</tt></td><td>Quadratwurzel</td></tr>
 <tr><td><tt>exp(x)</tt></td><td>Exponentialfunktion zur Basis e</td></tr>
