@@ -45,6 +45,9 @@ Qucs equations.<br><br>
 <tr><td><tt>phase(x)</tt></td><td>phase in degree</td></tr>
 <tr><td><tt>angle(x)</tt></td><td>phase in radians</td></tr>
 <tr><td><tt>arg(x)</tt></td><td>same as angle(x)</td></tr>
+<tr><td><tt>deg2rad(x)</tt></td><td>converts degrees to radians</td></tr>
+<tr><td><tt>rad2deg(x)</tt></td><td>converts radians to degrees</td></tr>
+<tr><td><tt>unwrap(rad[,tol])</tt></td><td>unwraps the angle (in radians) using the optional tolerance value (default is pi)</td></tr>
 <tr><td><tt>dB(x)</tt></td><td>voltage decibel</td></tr>
 <tr><td><tt>sqrt(x)</tt></td><td>square root</td></tr>
 <tr><td><tt>exp(x)</tt></td><td>exponential function to basis e</td></tr>
