@@ -1,3 +1,8 @@
+2005-06-06  Stefan Jahn  <stefan@lkcc.org>
+
+	* docs/en/mathfunc.html, docs/de/mathfunc.html: Added unwrap(),
+	rad2deg() and deg2rad() descriptions.
+
 2005-05-21  Stefan Jahn  <stefan@lkcc.org>
 
 	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented
